# eye-ai

./: Beschreibung.md  README.md
EyeAIApp/: LICENSE  README.md  settings.gradle.kts
EyeAIApp/app/: build.gradle.kts
EyeAIApp/app/src/main/: AndroidManifest.xml
EyeAIApp/app/src/main/assets/: README.md
EyeAIApp/app/src/main/assets/model-de/: uuid
EyeAIApp/app/src/main/cpp/: .clang-format  CMakeLists.txt  ImageUtils.cpp  ImageUtils.hpp  Log.hpp  MutexGuard.hpp  NativeJavaScopes.hpp  NativeLib.cpp
EyeAIApp/app/src/main/cpp/src/: DepthEstimation.cpp  DepthEstimation.hpp  NativeLib.cpp
EyeAIApp/app/src/main/cpp/src/audio/: SpatialAudioEngine.cpp  SpatialAudioEngine.hpp
EyeAIApp/app/src/main/cpp/src/onnx/: OnnxRuntime.cpp  OnnxRuntime.hpp  OnnxUtils.cpp  OnnxUtils.hpp
EyeAIApp/app/src/main/cpp/src/tflite/: TfLiteRuntime.cpp  TfLiteRuntime.hpp  TfLiteUtils.cpp  TfLiteUtils.hpp  tflite_profiler.h
EyeAIApp/app/src/main/cpp/src/utils/: Exceptions.cpp  Exceptions.hpp  ImageUtils.cpp  ImageUtils.hpp  NativeJavaScopes.cpp  NativeJavaScopes.hpp  Profiling.cpp  Profiling.hpp
EyeAIApp/app/src/main/java/com/algorithmic_alliance/depthcamera/: EyeAIApp.kt  MainActivity.kt  PermissionManager.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/depthcamera/camera/: CameraFrameAnalyzer.kt  CameraManager.kt  CameraSelector.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/depthcamera/depth/: DepthModel.kt  TfLiteDepthModel.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/eyeaiapp/: EyeAIApp.kt  MainActivity.kt  NativeLib.kt  PermissionManager.kt  Settings.kt  SettingsActivity.kt  Vibration.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/eyeaiapp/camera/: CameraFrameAnalyzer.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/eyeaiapp/depth/: DepthModel.kt  OnnxModel.kt  TfLiteDepthModel.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/eyeaiapp/llm/: GoogleAIStudioLLM.kt  LLM.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/eyeaiapp/object_detection/: YoloModel.kt  YoloModelInfo.kt
EyeAIApp/app/src/main/java/com/algorithmic_alliance/eyeaiapp/speech_recognition/: VoskModel.kt
EyeAIApp/app/src/main/res/drawable/: rounded_button.xml  thunder.xml
EyeAIApp/app/src/main/res/layout/: activity_main.xml
EyeAIApp/app/src/main/res/layout-land/: activity_main.xml
EyeAIApp/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
EyeAIApp/app/src/main/res/xml/: settings_preferences.xml
EyeAIApp/gradle/: libs.versions.toml
EyeAIApp/gradle/wrapper/: gradle-wrapper.properties
EyeAICore/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
EyeAICore/include/EyeAICore/: DepthEstimation.hpp  DepthModel.hpp  Operators.hpp  YoloModel.hpp
EyeAICore/include/EyeAICore/audio/: SpatialAudioEngine.hpp
EyeAICore/include/EyeAICore/onnx/: OnnxRuntime.hpp  OnnxUtils.hpp
EyeAICore/include/EyeAICore/tflite/: TfLiteRuntime.hpp  TfLiteUtils.hpp
EyeAICore/include/EyeAICore/utils/: DepthColormap.hpp  Errors.hpp  ImageUtils.hpp  MutexGuard.hpp  Profiling.hpp
EyeAICore/metric_depth/: CMakeLists.txt  README.md
EyeAICore/metric_depth/scripts/: build_and_run_eval_dataset.sh  prepare_dataset.py  visualize_all_trendlines.py  visualize_result_file.py
EyeAICore/metric_depth/src/: main.cpp  utils.hpp
EyeAICore/object_detection/: CMakeLists.txt
EyeAICore/object_detection/src/: test_yolo.cpp
EyeAICore/src/: DepthEstimation.cpp  DepthModel.cpp  Operators.cpp  YoloModel.cpp
EyeAICore/src/audio/: SpatialAudioEngine.cpp
EyeAICore/src/onnx/: OnnxRuntime.cpp  OnnxUtils.cpp
EyeAICore/src/tflite/: TfLiteRuntime.cpp  TfLiteUtils.cpp
EyeAICore/src/utils/: DepthColormap.cpp  Exceptions.cpp  Profiling.cpp
